--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "xxxxxxxxxxxxxxxxxxxxxxxx",
+    "name": "mirumi-tech",
     "version": "1.0.0",
     "private": true,
     "scripts": {
@@ -24,6 +24,10 @@
         "@types/jest": "^24.0.19",
         "@types/uuid": "^8.3.4",
         "@typescript-eslint/eslint-plugin": "^4.18.0",
-        "@typescript-eslint/parser": "^4.18.0"
+        "@typescript-eslint/parser": "^4.18.0",
+        "acorn": "^8.7.1",
+        "node-sass": "^7.0.1",
+        "sass-loader": "^13.0.0",
+        "webpack": "^5.73.0"
     }
 }
