--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "eslint": "^6.7.2",
         "nuxt": "^3.0.0-rc.4",
         "pinia": "^2.0.11",
+        "prismjs": "^1.28.0",
         "sass": "^1.52.3",
         "typescript": "^4.7.3",
         "uuid": "^8.3.2",
@@ -22,10 +23,12 @@
     },
     "devDependencies": {
         "@types/jest": "^24.0.19",
+        "@types/prismjs": "^1.26.0",
         "@types/uuid": "^8.3.4",
         "@typescript-eslint/eslint-plugin": "^4.18.0",
         "@typescript-eslint/parser": "^4.18.0",
         "acorn": "^8.7.1",
+        "babel-plugin-prismjs": "^2.1.0",
         "node-sass": "^7.0.1",
         "sass-loader": "^13.0.0",
         "webpack": "^5.73.0"
