--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@pinia/nuxt": "^0.1.9",
         "eslint": "^6.7.2",
+        "lodash": "^4.17.21",
         "nuxt": "^3.0.0-rc.4",
         "pinia": "^2.0.11",
         "prismjs": "^1.28.0",
@@ -23,6 +24,7 @@
     },
     "devDependencies": {
         "@types/jest": "^24.0.19",
+        "@types/lodash": "^4.14.182",
         "@types/prismjs": "^1.26.0",
         "@types/uuid": "^8.3.4",
         "@typescript-eslint/eslint-plugin": "^4.18.0",
