--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "private": true,
     "scripts": {
-        "dev": "nuxt dev --port 8080",
+        "dev": "nuxt dev",
         "build": "nuxt build",
         "generate": "nuxt generate",
         "preview": "nuxt preview"
