--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     },
     "dependencies": {
         "eslint": "^6.7.2",
+        "js-cookie": "^3.0.1",
         "lodash": "^4.17.21",
         "pinia": "^2.0.11",
         "prismjs": "^1.28.0",
@@ -21,6 +22,7 @@
     },
     "devDependencies": {
         "@types/jest": "^24.0.19",
+        "@types/js-cookie": "^3.0.2",
         "@types/lodash": "^4.14.182",
         "@types/prismjs": "^1.26.0",
         "@types/uuid": "^8.3.4",
