--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "preview": "nuxt preview"
     },
     "dependencies": {
+        "@vueuse/core": "^8.9.3",
         "eslint": "^6.7.2",
         "js-cookie": "^3.0.1",
         "lodash": "^4.17.21",
