--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -33,6 +33,8 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
-      - name: Deploying...
+      - name: copy files to s3...
         run: |
+          aws s3 rm s3://mirumitech-prd-static-hosting/ --recursive
           aws s3 cp .output/public/ s3://mirumitech-prd-static-hosting/ --recursive
+          aws cloudfront create-invalidation --distribution-id E2QCFKU2S6S2EE --paths '/*'
