add: workflow dispatch (for regenerate after insert new content)

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,9 +1,10 @@
 name: deploy
 
 on:
-  push:
-    branches:
-      - release/prd
+  - push:
+      branches:
+        - release/prd
+  - workflow_dispatch:
 
 jobs:
   deploy:
