--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,10 +1,10 @@
 name: deploy
 
 on:
-  - push:
+  push:
       branches:
         - release/prd
-  - workflow_dispatch:
+  workflow_dispatch:
 
 jobs:
   deploy:
