--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "typescript": "^4.7.3",
         "uuid": "^8.3.2",
         "vue": "^3.2.33",
+        "vue-gtag": "^2.0.1",
         "vue-toastification": "^2.0.0-rc.5"
     },
     "devDependencies": {
