--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -37,5 +37,6 @@ jobs:
       - name: copy files to s3...
         run: |
           aws s3 rm s3://mirumitech-prd-static-hosting/ --recursive --exclude "assets/components/*"
-          aws s3 cp .output/public/ s3://mirumitech-prd-static-hosting/ --recursive
+          aws s3 cp .output/public/_nuxt/ s3://mirumitech-prd-static-hosting/_nuxt --recursive --cache-control "max-age=31536000"
+          aws s3 cp .output/public/ s3://mirumitech-prd-static-hosting/ --recursive --exclude "_nuxt/*" --cache-control "no-cache"
           aws cloudfront create-invalidation --distribution-id E2QCFKU2S6S2EE --paths "/*"
