--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -38,5 +38,5 @@ jobs:
         run: |
           aws s3 rm s3://mirumitech-prd-static-hosting/ --recursive --exclude "assets/components/*" --exclude "assets/prism.js"
           aws s3 cp .output/public/_nuxt/ s3://mirumitech-prd-static-hosting/_nuxt --recursive --cache-control "max-age=31536000"
-          aws s3 cp .output/public/ s3://mirumitech-prd-static-hosting/ --recursive --exclude "_nuxt/*" --exclude ".output/public/assets/prism.js" --cache-control "no-cache"
+          aws s3 cp .output/public/ s3://mirumitech-prd-static-hosting/ --recursive --exclude "_nuxt/*" --exclude "*prism.js*" --cache-control "no-cache"
           aws cloudfront create-invalidation --distribution-id E2QCFKU2S6S2EE --paths "/*"
