--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -12,9 +12,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
     
-      - uses: actions/setup-node@v2.4.1
+      - uses: actions/setup-node@v3
         with:
-          node-version: "18"
+          node-version: 18.9.1
 
       - name: install npm modules
         run: npm ci  # if some occured problems, try reverting to `npm install`
